<resources>
    <!-- App Name -->
    <string name="app_name_release">暮光小猿图片管理器2</string>
    <string name="app_name_debug">dbg_暮光小猿图片管理器2</string>
    <string name="app_addpic_release">添加图片</string>
    <string name="app_addpic_debug">dbg_添加图片</string>

    <!-- Activity Titles -->
    <string name="title_activity_browser">BrowserActivity</string>
    <string name="title_activity_pic_lib_manager">图库管理</string>
    <string name="title_activity_server_settings">设置</string>

    <!-- Menu Options -->
    <string name="menu_main_piclib">图库管理</string>
    <string name="menu_main_system">系统管理</string>
    <string name="menu_main_login">登录</string>
    <string name="menu_main_logout">退出登录</string>
    <string name="menu_main_settings">设置</string>

    <!-- Preference Titles -->
    <string name="settings_base">基本设置</string>

    <!-- Messages Preferences -->
    <string name="settings_base_server">服务器地址</string>

    <!-- action text -->
    <string name="text_cancel">取消</string>
    <string name="text_close">关闭</string>
    <string name="text_create_offline_library">创建离线图库</string>
    <string name="text_create_online_library">创建在线图库</string>
    <string name="text_save">保存</string>
    <string name="text_confirm">确定</string>
    <string name="text_delete">删除</string>
    <string name="text_search">搜索</string>
    <string name="text_share">分享</string>
    <string name="text_save_tmp">保存临时</string>
    <string name="text_clear_save_tmp">清空并保存临时</string>
    <!-- tag text -->
    <string name="text_pid">pid</string>
    <string name="text_description">描述</string>
    <string name="text_add_tag">添加标签</string>
    <string name="text_piclib_name">图库名</string>
    <string name="text_info">信息</string>
    <string name="edit_search_hint">输入搜索关键字</string>

</resources>
