<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_main_sync"
          android:orderInCategory="0"
          android:title="数据同步"
          android:icon="@drawable/ic_baseline_sync_24"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_main_piclib"
          android:orderInCategory="0"
          android:title="@string/menu_main_piclib"
          app:showAsAction="never"/>

    <item android:id="@+id/menu_main_system"
          android:orderInCategory="1"
          android:title="@string/menu_main_system"
          app:showAsAction="never"/>

    <item android:id="@+id/menu_main_login"
          android:orderInCategory="2"
          android:title="@string/menu_main_login"
          app:showAsAction="never"/>

    <item android:id="@+id/menu_main_logout"
          android:orderInCategory="3"
          android:title="@string/menu_main_logout"
          app:showAsAction="never"/>

    <item android:id="@+id/menu_main_settings"
          android:orderInCategory="4"
          android:title="@string/menu_main_settings"
          app:showAsAction="never"/>

</menu>

